--- a/style.css
+++ b/style.css
@@ -11,6 +11,19 @@ body {
     background-size: cover;
 }
 
+.area {
+    font-family: 'Jim Nightshade', cursive;
+    font-size: 60px;
+}
+
+.current-location {
+    text-align: center;
+    font-size: 20px;
+    margin-left: 400px;
+    margin-right: 400px;
+    padding: 5px;
+}
+
 .hud-left {
     margin-left: 10px;
     margin-right: 75px;
@@ -48,6 +61,10 @@ body {
     background-color: #fff;
 }
 
+.save-game {
+    display: inline-block;
+}
+
 .combat-log {
     height: 100%;
     position: relative;
@@ -70,6 +87,19 @@ body {
     margin-left: 60px;
 }
 
+#currentEnemyHealth {
+    width: 100%;
+    background-color: #bfbfbf;
+    border: 1px solid #000;
+}
+
+#enemyHealth {
+    width: 100%;
+    transition: width 0.4s ease;
+    height: 30px;
+    background-color: #c10000;
+}
+
 #playerBoneShards {
     border-color: #000;
     color: #000;
@@ -79,7 +109,7 @@ body {
 #playerBoneShards span {
     color: #000;
     text-align: center;
-    margin-left: 60px;
+    margin-left: 20%;
 }
 
 #equipment {
@@ -105,20 +135,7 @@ table {
 tr, td {
     border-bottom: 1px solid;
     border-color: #bcbcbc;
-    padding: 3px
-}
-
-.current-location {
-    text-align: center;
-    font-size: 20px;
-    margin-left: 400px;
-    margin-right: 400px;
-    padding: 5px;
-}
-
-.current-location #area {
-    font-size: 30px;
-    text-transform: uppercase
+    padding: 3px;
 }
 
 #currentStage, #totalStages, #bestStageText {
@@ -149,19 +166,6 @@ tr, td {
     transition: width 0.8s ease;
 }
 
-#currentEnemyHealth {
-    width: 100%;
-    background-color: #bfbfbf;
-    border: 1px solid #000;
-}
-
-#enemyHealth {
-    width: 100%;
-    transition: width 0.4s ease;
-    height: 30px;
-    background-color: #c10000;
-}
-
 .enemy {
     text-align: center;
     font-size: 20px;
@@ -181,31 +185,143 @@ tr, td {
     background-color: #4a994e;
     color: white;
     border: 3px solid #438246;
+    transition: 0.2s;
 }
+
+.startCombatBtn:hover {
+    transition-timing-function: ease;
+    background-color: #43ab48;
+}
+
+#deathScreen > p {
+    font-size: 150px;
+    font-family: 'Jim Nightshade', cursive;
+    font-weight: 500;
+    letter-spacing: 5px;
+    color: darkred;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-left: -50px;
+    margin-top: -50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.death-screen {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    z-index: 2;
+    -webkit-animation-duration: 4s;
+    animation-duration: 4s;
+}
+
+ @-webkit-keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+ }
+
+ @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+ }
+
+ @-webkit-keyframes fadeOut {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+ }
+
+ @keyframes fadeOut {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+ }
+
+ .fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+ }
+
+ .fadeOut {
+    -webkit-animation-name: fadeOut;
+    animation-name: fadeOut;
+ }
 
 #overlay {
-  position: fixed;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 2;
-  cursor: pointer;
-  transition: 1s ease;
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 2;
+    transition: 1s ease;
+    transition-delay: 0.5s;
 }
 
-#overlayText{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 50px;
-  color: white;
-  transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
+.card-container {
+    display: block;
+    position: fixed;
+    z-index: 2;
+    height: 80%;
+    width: 80%;
+    top: 40px;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 40px;
+}
+
+.skill-card {
+    display: inline-block;
+    z-index: 3;
+    background-color: #fff;
+    height: 80%;
+    width: 25%;
+    float: left;
+    margin: 40px;
+    padding: 10px;
+    text-align: center;
+    transition-delay: 1s;
+    transition: 1s ease;
+    cursor: pointer;
+}
+
+.skill-card * {
+    cursor: pointer;
+}
+
+.title {
+    text-align: center;
+    font-size: 30px;
+    padding: 10px;
+}
+
+.info {
+    text-align: center;
+    font-size: 18px;
+    margin: 15px;
+    padding: 5px;
+}
+
+.card-holder * {
+    border-bottom: 0px solid;   
+}
+
+.skill-card:hover{
+    transition: 0.2s ease;
+    background-color: #BEBEBE;
+}
+
+.skill-card:active {
+    background-color: #00FFFF;
 }
 
 /*//---- Tooltip ----//*/
